client/src/styles.scss
$primary-color: lightblue;
$table-breakpoint: 480px;
$portfolio-bar-height: 50px;

@font-face {
  font-family: "B-Nazanin";
  src: local("B-Nazanin"), url(./fonts/b-nazanin-regular.ttf) format("truetype");
}

body {
  font-family: B-nazanin;
  font-weight: 500;
  font-size: 1.2rem;
}

.btn{
  svg{
    vertical-align: sub;
  }
}

.table-container {
  width: 90%;
  max-width: 1000px;
  margin: 0 auto;

  .table-container__head {
    background: $primary-color;
    display: flex;
    position: relative;
    cursor: pointer;
    justify-content: space-between;
    padding: 0.2rem 1rem;
    align-items: center;
    text-align: center;
    width: 100%;
    height: 40px;
    border-radius: 10px;

    font-size: 1rem;

    .value-info {
      margin-right: 10px;
    }
  }

  .buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 80px;

    a,span,svg{
      vertical-align: sub;
    }
  }

  .table-info {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }

  .table-container__head.active .toggle-btn {
    transform: rotate(180deg);
  }

  .table {
    width: 100%;
    max-height: 0;
    overflow-y: hidden;
    transition: max-height 0.2s ease-out;
  }

  .toggle-btn {
    position: absolute;
    cursor: pointer;
    margin-left: 1rem;
    left: 0;
    font-size: 16px;
    transition: transform ease-in-out 0.2s;
  }
}

.history-info {
  .styled-value {
    display: flex;
    justify-content: flex-start;
  }
  .filter-bar{
    display: flex;

    .filter{
      margin-left:25px;
    }
  }
}

.asset-detail__header {
  .label {
    margin-left: 10px;
  }
}

.styled-value {
  span {
    margin-left: 5px;
  }

  span,svg{
    vertical-align: sub;
  }
}

.add-form {
  margin: 5rem auto;
  padding: 0 2rem;
  max-width: 700px;
  height: 100vh;
  justify-content: center;

  .form-group {
    margin-bottom: 10px;
  }

  label {
    margin-bottom: 3px;
  }

  .purchase-date {
    label {
      margin-left: 2rem;
    }
  }

  .btn.submit {
    width: 100%;
    padding: 10px;
  }
}

//chart
.chartWrapper {
  overflow-x: auto;
}

.recharts-wrapper{
  margin: auto;
}

// portfolio
.portfolio{
  padding: 2rem;
  background-color: navy;
  margin: 50px auto;
  width: 80%;
  border-radius: 20px;
}

.portfolio__quota-bar {
  display: flex;
  direction: ltr;

  .quota{
      position: relative;
      height: $portfolio-bar-height;
      margin-left: .5rem;
      text-align: center;
      line-height: $portfolio-bar-height;

      &:first-child{
        margin-left: 0;
      }

      &:last-child:after{
        display: none;
      }

      &:first-child:before{
        display:none;
      }

      &:after{
      content: "";
      position: absolute;
      top: 0;
      right: -$portfolio-bar-height/2;
      border-radius: 100%;
      height: 100%;
      width: $portfolio-bar-height;
      background-color: white;
      }

      &:before{
      content: "";
      position: absolute;
      top: 0;
      left: -$portfolio-bar-height/2;
      width: $portfolio-bar-height;
      height: 100%;
      border-radius: 100px;

      background-color: inherit;
      }
  }
}

.portfolio__operations{
  margin-top: 30px;
  .link{
    padding:1rem;
    background-color: aqua;
    border-radius: 10px;
    cursor: pointer;
    text-decoration: none;
    color:black;
  }
  
}




// responsive table
.table {
  overflow-x: auto;
  th,
  td {
    text-align: right;
    white-space: nowrap;
    vertical-align: sub;
  }

  th {
    display: none;
  }

  td {
    display: block;

    &.row-number{
      width: 50px;
    }

    &:first-child {
      background-color: aqua;
    }

    &:last-child {
      border-bottom: 1px solid grey;
    }

    &:before {
      content: attr(data-th) ": ";
      font-weight: bold;
      width: 6.5em;
      display: inline-block;
    }
  }
}

@media (min-width: $table-breakpoint) {
  .table-container {
    .table-container__head {
      font-size: 1.2rem;
    }
  }
  .table {
    th,
    td {
      display: table-cell;
      text-align: center;
    }

    td {
      &:last-child {
        border-bottom: none;
      }

      &:before {
        display: none;
      }
    }
  }
}

